force-app/main/default/objects/Cruise_Customisations__c/Cruise_Customisations__c.object-meta.xml
<CustomObject>
    <description>Cruise Customisations</description>
    <label>Cruise Customisation</label>
    <nameField>
        <displayFormat>Cruise Custom -{0000}</displayFormat>
        <label>Cruise Custom</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cruise Customisations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>