force-app/main/default/objects/Cruise_Customisations__c/fields/Cruise_Custom__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Custom__c</fullName>
    <label>Cruise Custom</label>
    <type>AutoNumber</type>
</CustomField>