force-app/main/default/objects/Cruise_Customisations__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>orders</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>Cruise Customisations</relationshipLabel>
    <relationshipName>Cruise_Customisations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>