force-app/main/default/objects/Cruise_Customisations__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upgrade Cabin</fullName>
            </value>
            <value>
                <fullName>Ticket Changes (corrections)</fullName>
                <default>true</default>
                <label>Ticket Changes (corrections)</label>
            </value>
            <value>
                <fullName>Re/New Ticket Charge</fullName>
            </value>
            <value>
                <fullName>Customisation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>